package utils.Analyzer;

public enum TipoBucle {
    MAYORQUE,MENORQUE,IGUALQUE,OTRO
}
