package utils.Analyzer;

public enum TipoVariacion {
    CRECIENTE,
    DECRECIENTE,
    NULA
}
